--- a/views/index.jade
+++ b/views/index.jade
@@ -1,8 +1,13 @@
 
 html
     head
-        title!= title
         meta(name="viewport",content='width=device-width,initial-scale=1')
     body
-        h1!= message
+        nav
+            ul(class="nav")
+                each val in ["icon-home","icon-cog"]
+                    li
+                        a(href='#',class=val)
+
     link(rel='stylesheet', href = 'http://yui.yahooapis.com/pure/0.5.0/pure-min.css')
+    link(rel='stylesheet', href = '/assets/frontpage.css')
