--- a/views/index.jade
+++ b/views/index.jade
@@ -11,4 +11,4 @@ html
                             a(href='#',class=val)
 
     link(rel='stylesheet', href = 'http://yui.yahooapis.com/pure/0.5.0/pure-min.css')
-    link(rel='stylesheet', href = '/assets/frontpage.css')
+    link(rel='stylesheet', href = '/css/frontpage.css')
