--- a/views/index.jade
+++ b/views/index.jade
@@ -3,11 +3,12 @@ html
     head
         meta(name="viewport",content='width=device-width,initial-scale=1')
     body
+        div(style="height:25%")
         div(class="Aligner")
-            nav
+            nav(class="Aligner-item")
                 ul(class="nav")
                     each val in ["icon-home","icon-cog"]
-                        li
+                        li          
                             a(href='#',class=val)
 
     link(rel='stylesheet', href = 'http://yui.yahooapis.com/pure/0.5.0/pure-min.css')
