--- a/views/index.jade
+++ b/views/index.jade
@@ -7,9 +7,11 @@ html
         div(class="Aligner")
             nav(class="Aligner-item")
                 ul(class="nav")
-                    each val in ["icon-home","icon-cog"]
+                    each val in ["fa-cutlery","fa-automobile"]
                         li          
-                            a(href='#',class=val)
+                            a(href='#')
+                                i(class="fa "+val)
 
     link(rel='stylesheet', href = 'http://yui.yahooapis.com/pure/0.5.0/pure-min.css')
+    link(rel='stylesheet', href = '//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css')
     link(rel='stylesheet', href = '/css/frontpage.css')
