--- a/css/frontpage.css
+++ b/css/frontpage.css
@@ -43,7 +43,10 @@
     speak: none;
 }
 
-
+i.fa
+{
+    padding-top:50%;    
+}
 
 .nav {
     list-style: none;
@@ -83,7 +86,6 @@
 .nav li:before {
     content: "";
     display: block;
-    border-top: 1px solid #ddd;
     border-bottom: 1px solid #fff;
     width: 100%;
     height: 1px;
