--- a/views/base.jade
+++ b/views/base.jade
@@ -7,6 +7,11 @@ body
         script(src="http://anijs.github.io/lib/anijs/helpers/dom/anijs-helper-dom-min.js")
 link(rel='stylesheet', href = 'http://yui.yahooapis.com/pure/0.5.0/pure-min.css') 
 link(rel='stylesheet', href = '//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css') 
+<!--[if lte IE 8]>
+<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/grids-responsive-old-ie-min.css">
+<![endif]-->
+<!--[if gt IE 8]><!-->
+<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/grids-responsive-min.css">
+<!--<![endif]-->
 link(rel='stylesheet', href = '/css/frontpage.css')
-
 block afterbody
